--- a/Pagina WEB/index.html
+++ b/Pagina WEB/index.html
@@ -33,6 +33,9 @@
           Nuestro asistente personal está aquí para ayudarte, descubre mezclas
           personalizadas y recetas de cócteles adaptadas a tus gustos.
         </p>
+        <p>
+          Prueba add
+        </p>
       </div>
     </section>
     <section class="Productos">
