Se arreglo el error de las imagenes

--- a/Pagina WEB/index.html
+++ b/Pagina WEB/index.html
@@ -10,24 +10,24 @@
     <header>
       <div class="Bnavegación">
         <div class="Logo">
-          <img src="/imagenes/MEZCALIÓN.svg" alt="Image 1" />
-          <img src="/imagenes/logo 2.svg" alt="Image 2" />
+          <img src="imagenes/MEZCALIÓN.svg" alt="Image 1" />
+          <img src="imagenes/logo 2.svg" alt="Image 2" />
         </div>
         <div class="Apartados">
-          <img src="/imagenes/INICIO.svg" alt="Image 3" />
-          <img src="/imagenes/PRODUCTOS.svg" alt="Image 4" />
-          <img src="/imagenes/NOSOTROS.svg" alt="Image 5" />
+          <img src="imagenes/INICIO.svg" alt="Image 3" />
+          <img src="imagenes/PRODUCTOS.svg" alt="Image 4" />
+          <img src="imagenes/NOSOTROS.svg" alt="Image 5" />
         </div>
         <div class="Iconos">
-          <img src="/imagenes/lupa 1.svg" alt="Image 6" />
-          <img src="/imagenes/bolsa-de-la-compra 1.svg" alt="Image 7" />
-          <img src="/imagenes/usuario 1.svg" alt="Image 8" />
+          <img src="imagenes/lupa 1.svg" alt="Image 6" />
+          <img src="imagenes/bolsa-de-la-compra 1.svg" alt="Image 7" />
+          <img src="imagenes/usuario 1.svg" alt="Image 8" />
         </div>
       </div>
     </header>
     <section class="Inicio">
       <div class="Eslogan">
-        <img src="/imagenes/magueyes.jpeg" alt="Image 9" />
+        <img src="imagenes/magueyes.jpeg" alt="Image 9" />
         <h1>LA ESENCIA DE MÉXICO EN UNA BOTELLA.</h1>
         <p>
           Nuestro asistente personal está aquí para ayudarte, descubre mezclas
@@ -42,40 +42,40 @@
       <div class="Pmezcales">
         <div class="productos">
           <div class="carta">
-            <img src="/imagenes/botella.png" alt="Image 10" />
+            <img src="imagenes/botella.png" alt="Image 10" />
             <h3>Mezcal Blanco Joven, Etiqueta Verde.</h3>
             <p>Agotado</p>
           </div>
           <div class="carta">
-            <img src="/imagenes/botella.png" alt="Image 11" />
+            <img src="imagenes/botella.png" alt="Image 11" />
             <h3>Mezcal Blanco Joven, Etiqueta Verde.</h3>
             <p>Agotado</p>
           </div>
           <div class="carta">
-            <img src="/imagenes/botella.png" alt="Image 12" />
+            <img src="imagenes/botella.png" alt="Image 12" />
             <h3>Mezcal Blanco Joven, Etiqueta Verde.</h3>
             <p>Agotado</p>
           </div>
         </div>
         <div class="productos">
           <div class="carta">
-            <img src="/imagenes/botella.png" alt="Image 10" />
+            <img src="imagenes/botella.png" alt="Image 10" />
             <h3>Mezcal Blanco Joven, Etiqueta Verde.</h3>
             <p>Agotado</p>
           </div>
           <div class="carta">
-            <img src="/imagenes/botella.png" alt="Image 11" />
+            <img src="imagenes/botella.png" alt="Image 11" />
             <h3>Mezcal Blanco Joven, Etiqueta Verde.</h3>
             <p>Agotado</p>
           </div>
           <div class="carta">
-            <img src="/imagenes/botella.png" alt="Image 12" />
+            <img src="imagenes/botella.png" alt="Image 12" />
             <h3>Mezcal Blanco Joven, Etiqueta Verde.</h3>
             <p>Agotado</p>
           </div>
         </div>
         <div class="Bmostrar">
-          <img src="/imagenes/botonMostrarMás.svg" alt="" />
+          <img src="imagenes/botonMostrarMás.svg" alt="" />
         </div>
       </div>
     </section>
@@ -86,27 +86,27 @@
       <div class="Pmezcales">
         <div class="productos">
           <div class="carta">
-            <img src="/imagenes/coctal 1.png" alt="Image 10" />
+            <img src="imagenes/coctal 1.png" alt="Image 10" />
             <h3>Fresa y humo</h3>
             <p>Agotado</p>
           </div>
           <div class="carta">
-            <img src="/imagenes/coctal 1.png" alt="Image 11" />
+            <img src="imagenes/coctal 1.png" alt="Image 11" />
             <h3>Fresa y humo</h3>
           </div>
           <div class="carta">
-            <img src="/imagenes/coctal 1.png" alt="Image 12" />
+            <img src="imagenes/coctal 1.png" alt="Image 12" />
             <h3>Fresa y humo</h3>
           </div>
         </div>
         <div class="Bmostrar">
-          <img src="/imagenes/botonMostrarMás.svg" alt="" />
+          <img src="imagenes/botonMostrarMás.svg" alt="" />
         </div>
       </div>
     </section>
     <footer>
       <div class="Redes">
-        <img src="/imagenes/logoFooter.svg" alt="">
+        <img src="imagenes/logoFooter.svg" alt="">
         <div class="Contacto">
           <p>CONTÁCTO</p>
           <p>CEL - 4435954101</p>
@@ -118,7 +118,7 @@
           <p>LOGIN</p>
           <p>CARRITO</p>
         </div>
-        <img src="/imagenes/paypal-credit-card.svg" alt="">
+        <img src="imagenes/paypal-credit-card.svg" alt="">
     </footer>
   </body>
 </html>
