Creacion de Productos y arreglo de color de botones de inicio, nosotros y productos

--- a/Pagina WEB/nosotros.html
+++ b/Pagina WEB/nosotros.html
@@ -15,9 +15,9 @@
           <img src="imagenes/logo 2.svg" alt="Image 2" />
         </div>
         <div class="Apartados">
-          <img src="imagenes/INICIO.svg" alt="Image 3" />
+          <img src="imagenes/INICIO2.svg" alt="Image 3" />
           <img src="imagenes/PRODUCTOS.svg" alt="Image 4" />
-          <img src="imagenes/NOSOTROS.svg" alt="Image 5" />
+          <img src="imagenes/NOSOTROS2.svg" alt="Image 5" />
         </div>
         <div class="Iconos">
           <img src="imagenes/lupa 1.svg" alt="Image 6" />
