Cambios en index, tamaño de imagenes y barra de navegación

--- a/Pagina WEB/index.html
+++ b/Pagina WEB/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Banner</title>
+    <title>Inicio</title>
     <link rel="stylesheet" href="estilos.css" />
   </head>
   <body>
@@ -82,16 +82,15 @@
         </div>
       </div>
     </section>
-    <section class="Conteles">
+    <section class="Cocteles">
       <div class="Titulo">
         <h2>COCTELES</h2>
       </div>
-      <div class="Pmezcales">
+      <div class="Pcocteles">
         <div class="productos">
           <div class="carta">
             <img src="imagenes/coctal 1.png" alt="Image 10" />
             <h3>Fresa y humo</h3>
-            <p>Agotado</p>
           </div>
           <div class="carta">
             <img src="imagenes/coctal 1.png" alt="Image 11" />
