agregue la funcionalidad de botones a la barra de navegación y cambie las imagenes dependiendo de donde estes colocado

--- a/Pagina WEB/productos.html
+++ b/Pagina WEB/productos.html
@@ -10,18 +10,18 @@
     <header>
       <div class="Bnavegación">
         <div class="Logo">
-          <img src="imagenes/MEZCALIÓN.svg" alt="Image 1" />
-          <img src="imagenes/logo 2.svg" alt="Image 2" />
+          <a href="index.html"><img src="imagenes/MEZCALIÓN.svg" alt="Image 1" /></a>
+          <a href="index.html"><img src="imagenes/logo 2.svg" alt="Image 2" /></a>
         </div>
         <div class="Apartados">
-          <img src="imagenes/INICIO2.svg" alt="Image 3" />
-          <img src="imagenes/PRODUCTOS2.svg" alt="Image 4" />
-          <img src="imagenes/NOSOTROS.svg" alt="Image 5" />
+          <a href="index.html"><img src="imagenes/INICIO2.svg" alt="Image 3" /></a>
+          <a href="productos.html"><img src="imagenes/PRODUCTOS2.svg" alt="Image 4" /></a>
+          <a href="nosotros.html"><img src="imagenes/NOSOTROS.svg" alt="Image 5" /></a>
         </div>
         <div class="Iconos">
           <img src="imagenes/lupa 1.svg" alt="Image 6" />
-          <img src="imagenes/bolsa-de-la-compra 1.svg" alt="Image 7" />
-          <img src="imagenes/usuario 1.svg" alt="Image 8" />
+          <a href="carrito.html"><img src="imagenes/bolsa-de-la-compra 1.svg" alt="Image 7" /></a>
+          <a href="login.html"><img src="imagenes/usuario 1.svg" alt="Image 8" /></a>
         </div>
       </div>
     </header>
