Se agrego el archivo navegacion y se elimino la barra en los demas archivos, con un script se agrega la barra

--- a/Pagina WEB/index.html
+++ b/Pagina WEB/index.html
@@ -1,123 +1,124 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Inicio</title>
-    <link rel="stylesheet" href="estilos.css" />
-  </head>
-  <body>
-    <header>
-      <div class="Bnavegación">
-        <div class="Logo">
-          <a href="index.html"><img src="imagenes/MEZCALIÓN.svg" alt="Image 1" /></a>
-          <a href="index.html"><img src="imagenes/logo 2.svg" alt="Image 2" /></a>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Inicio</title>
+  <link rel="stylesheet" href="estilos.css" />
+</head>
+
+<body>
+  <header>
+  </header>
+  <section class="Inicio">
+    <div class="Eslogan">
+      <img src="imagenes/magueyes.jpeg" alt="Image 9" />
+      <h1>LA ESENCIA DE MÉXICO EN UNA BOTELLA.</h1>
+      <p>
+        Nuestro asistente personal está aquí para ayudarte, descubre mezclas
+        personalizadas y recetas de cócteles adaptadas a tus gustos.
+      </p>
+    </div>
+  </section>
+  <section class="Productos">
+    <div class="Titulo">
+      <h2>EL MEZCAL</h2>
+    </div>
+    <div class="Pmezcales">
+      <div class="productos">
+        <div class="carta">
+          <img src="imagenes/botella.png" alt="Image 10" />
+          <h3>Mezcal Blanco Joven, Etiqueta Verde.</h3>
+          <p>Agotado</p>
         </div>
-        <div class="Apartados">
-          <a href="index.html"><img src="imagenes/INICIO.svg" alt="Image 3" /></a>
-          <a href="productos.html"><img src="imagenes/PRODUCTOS.svg" alt="Image 4" /></a>
-          <a href="nosotros.html"><img src="imagenes/NOSOTROS.svg" alt="Image 5" /></a>
+        <div class="carta">
+          <img src="imagenes/botella.png" alt="Image 11" />
+          <h3>Mezcal Blanco Joven, Etiqueta Verde.</h3>
+          <p>Agotado</p>
         </div>
-        <div class="Iconos">
-          <img src="imagenes/lupa 1.svg" alt="Image 6" />
-          <a href="carrito.html"><img src="imagenes/bolsa-de-la-compra 1.svg" alt="Image 7" /></a>
-          <a href="login.html"><img src="imagenes/usuario 1.svg" alt="Image 8" /></a>
-        </div>
-      </div>
-    </header>
-    <section class="Inicio">
-      <div class="Eslogan">
-        <img src="imagenes/magueyes.jpeg" alt="Image 9" />
-        <h1>LA ESENCIA DE MÉXICO EN UNA BOTELLA.</h1>
-        <p>
-          Nuestro asistente personal está aquí para ayudarte, descubre mezclas
-          personalizadas y recetas de cócteles adaptadas a tus gustos.
-        </p>
-      </div>
-    </section>
-    <section class="Productos">
-      <div class="Titulo">
-        <h2>EL MEZCAL</h2>
-      </div>
-      <div class="Pmezcales">
-        <div class="productos">
-          <div class="carta">
-            <img src="imagenes/botella.png" alt="Image 10" />
-            <h3>Mezcal Blanco Joven, Etiqueta Verde.</h3>
-            <p>Agotado</p>
-          </div>
-          <div class="carta">
-            <img src="imagenes/botella.png" alt="Image 11" />
-            <h3>Mezcal Blanco Joven, Etiqueta Verde.</h3>
-            <p>Agotado</p>
-          </div>
-          <div class="carta">
-            <img src="imagenes/botella.png" alt="Image 12" />
-            <h3>Mezcal Blanco Joven, Etiqueta Verde.</h3>
-            <p>Agotado</p>
-          </div>
-        </div>
-        <div class="productos">
-          <div class="carta">
-            <img src="imagenes/botella.png" alt="Image 10" />
-            <h3>Mezcal Blanco Joven, Etiqueta Verde.</h3>
-            <p>Agotado</p>
-          </div>
-          <div class="carta">
-            <img src="imagenes/botella.png" alt="Image 11" />
-            <h3>Mezcal Blanco Joven, Etiqueta Verde.</h3>
-            <p>Agotado</p>
-          </div>
-          <div class="carta">
-            <img src="imagenes/botella.png" alt="Image 12" />
-            <h3>Mezcal Blanco Joven, Etiqueta Verde.</h3>
-            <p>Agotado</p>
-          </div>
-        </div>
-        <div class="Bmostrar">
-          <img src="imagenes/botonMostrarMás.svg" alt="" />
+        <div class="carta">
+          <img src="imagenes/botella.png" alt="Image 12" />
+          <h3>Mezcal Blanco Joven, Etiqueta Verde.</h3>
+          <p>Agotado</p>
         </div>
       </div>
-    </section>
-    <section class="Cocteles">
-      <div class="Titulo">
-        <h2>COCTELES</h2>
-      </div>
-      <div class="Pcocteles">
-        <div class="productos">
-          <div class="carta">
-            <img src="imagenes/coctal 1.png" alt="Image 10" />
-            <h3>Fresa y humo</h3>
-          </div>
-          <div class="carta">
-            <img src="imagenes/coctal 1.png" alt="Image 11" />
-            <h3>Fresa y humo</h3>
-          </div>
-          <div class="carta">
-            <img src="imagenes/coctal 1.png" alt="Image 12" />
-            <h3>Fresa y humo</h3>
-          </div>
+      <div class="productos">
+        <div class="carta">
+          <img src="imagenes/botella.png" alt="Image 10" />
+          <h3>Mezcal Blanco Joven, Etiqueta Verde.</h3>
+          <p>Agotado</p>
         </div>
-        <div class="Bmostrar">
-          <img src="imagenes/botonMostrarMás.svg" alt="" />
+        <div class="carta">
+          <img src="imagenes/botella.png" alt="Image 11" />
+          <h3>Mezcal Blanco Joven, Etiqueta Verde.</h3>
+          <p>Agotado</p>
+        </div>
+        <div class="carta">
+          <img src="imagenes/botella.png" alt="Image 12" />
+          <h3>Mezcal Blanco Joven, Etiqueta Verde.</h3>
+          <p>Agotado</p>
         </div>
       </div>
-    </section>
-    <footer>
-      <div class="Redes">
-        <img src="imagenes/logoFooter.svg" alt="">
-        <div class="Contacto">
-          <p>CONTÁCTO</p>
-          <p>CEL - 4435954101</p>
-          <p>CORREO - contacto@mezcalion.com</p>
+      <div class="Bmostrar">
+        <img src="imagenes/botonMostrarMás.svg" alt="" />
+      </div>
+    </div>
+  </section>
+  <section class="Cocteles">
+    <div class="Titulo">
+      <h2>COCTELES</h2>
+    </div>
+    <div class="Pcocteles">
+      <div class="productos">
+        <div class="carta">
+          <img src="imagenes/coctal 1.png" alt="Image 10" />
+          <h3>Fresa y humo</h3>
         </div>
-        <div class="Paginas">
-          <p>PRODUCTOS</p>
-          <p>NOSOTROS</p>
-          <p>LOGIN</p>
-          <p>CARRITO</p>
+        <div class="carta">
+          <img src="imagenes/coctal 1.png" alt="Image 11" />
+          <h3>Fresa y humo</h3>
         </div>
-        <img src="imagenes/paypal-credit-card.svg" alt="">
-    </footer>
-  </body>
+        <div class="carta">
+          <img src="imagenes/coctal 1.png" alt="Image 12" />
+          <h3>Fresa y humo</h3>
+        </div>
+      </div>
+      <div class="Bmostrar">
+        <img src="imagenes/botonMostrarMás.svg" alt="" />
+      </div>
+    </div>
+  </section>
+  <footer>
+    <div class="Redes">
+      <img src="imagenes/logoFooter.svg" alt="">
+      <div class="Contacto">
+        <p>CONTÁCTO</p>
+        <p>CEL - 4435954101</p>
+        <p>CORREO - contacto@mezcalion.com</p>
+      </div>
+      <div class="Paginas">
+        <p>PRODUCTOS</p>
+        <p>NOSOTROS</p>
+        <p>LOGIN</p>
+        <p>CARRITO</p>
+      </div>
+      <img src="imagenes/paypal-credit-card.svg" alt="">
+  </footer>
+  <script>
+    fetch('navegacion.html')
+      .then(response => response.text())
+      .then(text => {
+        const header = document.querySelector('header');
+        if (header) {
+          header.innerHTML = text;
+        } else {
+          const body = document.querySelector('body');
+          body.insertAdjacentHTML('afterbegin', text);
+        }
+      })
+      .catch(error => console.error(error));
+  </script>
+</body>
+
 </html>
