--- a/Pagina WEB/nosotros.html
+++ b/Pagina WEB/nosotros.html
@@ -1,95 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nosotros</title>
-    <link rel="stylesheet" href="estilos.css" />
-    <link href='https://fonts.googleapis.com/css?family=Playfair Display' rel='stylesheet'>
-  </head>
-  <body>
-    <header>
-      <div class="Bnavegación">
-        <div class="Logo">
-          <a href="index.html"><img src="imagenes/MEZCALIÓN.svg" alt="Image 1" /></a>
-          <a href="index.html"><img src="imagenes/logo 2.svg" alt="Image 2" /></a>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Nosotros</title>
+  <link rel="stylesheet" href="estilos.css" />
+  <link href='https://fonts.googleapis.com/css?family=Playfair Display' rel='stylesheet'>
+</head>
+
+<body>
+  <header>
+  </header>
+  <section class="cuerpo">
+    <div class="nosotros">
+      <div class="titulo">
+        <h1>MEZCALION</h1>
+      </div>
+      <div class="estrellas">
+        <img src="imagenes/star.png">
+        <img src="imagenes/star.png">
+        <img src="imagenes/star.png">
+        <img src="imagenes/star.png">
+        <img src="imagenes/star.png">
+      </div>
+      <div class="informacion">
+        <p>
+          Más allá de ofrecer una selección excepcional de mezcales, nos esforzamos por establecer una
+          conexión auténtica con nuestros clientes. En el núcleo de nuestro negocio está la honestidad y
+          el compromiso con una experiencia de compra transparente y confiable. Nuestro chatbot no es
+          solo una herramienta conveniente, sino una extensión de nuestro compromiso.</p>
+        <p>
+          En el centro de esta experiencia se encuentra nuestro chatbot, una herramienta diseñada para brindar
+          recomendaciones de mezcal y recetas de cócteles de manera personalizada. Este chatbot no solo ofrece
+          sugerencias genéricas, sino que utiliza algoritmos avanzados para comprender los gustos individuales de
+          cada usuario. A través de una serie de preguntas simples, el chatbot recopila información sobre las
+          preferencias de sabor y las restricciones de presupuesto del usuario.
+        </p>
+        <img src="imagenes/chatbot.png">
+      </div>
+      <div class="estrellas">
+        <img src="imagenes/star.png">
+        <img src="imagenes/star.png">
+        <img src="imagenes/star.png">
+        <img src="imagenes/star.png">
+        <img src="imagenes/star.png">
+      </div>
+      <div class="ubicacion">
+        <div class="direccion">
+          <h2>
+            Ubicación
+          </h2>
+          <p>
+            58060, Avenida Universidad 1146, Villa Universidad, 58060 Morelia, Mich.
+          </p>
         </div>
-        <div class="Apartados">
-          <a href="index.html"><img src="imagenes/INICIO2.svg" alt="Image 3" /></a>
-          <a href="productos.html"><img src="imagenes/PRODUCTOS.svg" alt="Image 4" /></a>
-          <a href="nosotros.html"><img src="imagenes/NOSOTROS2.svg" alt="Image 5" /></a>
-        </div>
-        <div class="Iconos">
-          <img src="imagenes/lupa 1.svg" alt="Image 6" />
-          <a href="carrito.html"><img src="imagenes/bolsa-de-la-compra 1.svg" alt="Image 7" /></a>
-          <a href="login.html"><img src="imagenes/usuario 1.svg" alt="Image 8" /></a>
+        <div class="mapa">
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3756.6420552934756!2d-101.2043330247555!3d19.68527073256316!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x842d0dd3dddc0b13%3A0x22fd5172a9083e75!2sAvenida%20Universidad%201146%2C%20Villa%20Universidad%2C%2058060%20Morelia%2C%20Mich.!5e0!3m2!1ses-419!2smx!4v1709862764778!5m2!1ses-419!2smx"
+            width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
       </div>
-    </header>
-    <section class="cuerpo">
-        <div class="nosotros">
-            <div class="titulo">
-                <h1>MEZCALION</h1>
-            </div>
-            <div class="estrellas">
-                <img src="imagenes/star.png">
-                <img src="imagenes/star.png">
-                <img src="imagenes/star.png">
-                <img src="imagenes/star.png">
-                <img src="imagenes/star.png">
-            </div>
-            <div class="informacion">
-                   <p>
-                    Más allá de ofrecer una selección excepcional de mezcales, nos esforzamos por establecer una
-                    conexión auténtica con nuestros clientes. En el núcleo de nuestro negocio está la honestidad y 
-                    el compromiso con una experiencia de compra transparente y confiable. Nuestro chatbot no es 
-                    solo una herramienta conveniente, sino una extensión de nuestro compromiso.</p>
-                   <p>
-                    En el centro de esta experiencia se encuentra nuestro chatbot, una herramienta diseñada para brindar 
-                    recomendaciones de mezcal y recetas de cócteles de manera personalizada. Este chatbot no solo ofrece 
-                    sugerencias genéricas, sino que utiliza algoritmos avanzados para comprender los gustos individuales de 
-                    cada usuario. A través de una serie de preguntas simples, el chatbot recopila información sobre las 
-                    preferencias de sabor y las restricciones de presupuesto del usuario.
-                   </p>
-                <img src="imagenes/chatbot.png">
-            </div>
-            <div class="estrellas">
-                <img src="imagenes/star.png">
-                <img src="imagenes/star.png">
-                <img src="imagenes/star.png">
-                <img src="imagenes/star.png">
-                <img src="imagenes/star.png">
-            </div>
-            <div class="ubicacion">
-                <div class="direccion">
-                    <h2>
-                        Ubicación
-                    </h2>
-                    <p>
-                        58060, Avenida Universidad 1146, Villa Universidad, 58060 Morelia, Mich.
-                    </p>
-                </div>
-                <div class="mapa">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3756.6420552934756!2d-101.2043330247555!3d19.68527073256316!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x842d0dd3dddc0b13%3A0x22fd5172a9083e75!2sAvenida%20Universidad%201146%2C%20Villa%20Universidad%2C%2058060%20Morelia%2C%20Mich.!5e0!3m2!1ses-419!2smx!4v1709862764778!5m2!1ses-419!2smx" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                </div>
-            </div>
-        </div>
-    </section>
-    <footer>
-      <div class="Redes">
-        <img src="imagenes/logoFooter.svg" alt="">
-        <div class="Contacto">
-          <p>CONTÁCTO</p>
-          <p>CEL - 4435954101</p>
-          <p>CORREO - contacto@mezcalion.com</p>
-        </div>
-        <div class="Paginas">
-          <p>PRODUCTOS</p>
-          <p>NOSOTROS</p>
-          <p>LOGIN</p>
-          <p>CARRITO</p>
-        </div>
-        <img src="imagenes/paypal-credit-card.svg" alt="">
-    </footer>
-  </body>
+    </div>
+  </section>
+  <footer>
+    <div class="Redes">
+      <img src="imagenes/logoFooter.svg" alt="">
+      <div class="Contacto">
+        <p>CONTÁCTO</p>
+        <p>CEL - 4435954101</p>
+        <p>CORREO - contacto@mezcalion.com</p>
+      </div>
+      <div class="Paginas">
+        <p>PRODUCTOS</p>
+        <p>NOSOTROS</p>
+        <p>LOGIN</p>
+        <p>CARRITO</p>
+      </div>
+      <img src="imagenes/paypal-credit-card.svg" alt="">
+  </footer>
+  <script>
+    fetch('navegacion.html')
+      .then(response => response.text())
+      .then(text => {
+        const header = document.querySelector('header');
+        if (header) {
+          header.innerHTML = text;
+        } else {
+          const body = document.querySelector('body');
+          body.insertAdjacentHTML('afterbegin', text);
+        }
+      })
+      .catch(error => console.error(error));
+  </script>
+</body>
+
 </html>
