--- a/Pagina WEB/productos.html
+++ b/Pagina WEB/productos.html
@@ -1,118 +1,119 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="estilos.css" />
-    <title>Prodcutos</title>
-  </head>
-  <body>
-    <header>
-      <div class="Bnavegación">
-        <div class="Logo">
-          <a href="index.html"><img src="imagenes/MEZCALIÓN.svg" alt="Image 1" /></a>
-          <a href="index.html"><img src="imagenes/logo 2.svg" alt="Image 2" /></a>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="estilos.css" />
+  <title>Prodcutos</title>
+</head>
+
+<body>
+  <header>
+  </header>
+  <section class="Productos">
+    <div class="Pmezcales2">
+      <div class="productos">
+        <div class="carta">
+          <img src="imagenes/botella-Ejemplo 2.png" alt="Image 10" />
+          <h3>Mezcal Blanco Joven, Etiqueta Verde.</h3>
+          <p>Agotado</p>
         </div>
-        <div class="Apartados">
-          <a href="index.html"><img src="imagenes/INICIO2.svg" alt="Image 3" /></a>
-          <a href="productos.html"><img src="imagenes/PRODUCTOS2.svg" alt="Image 4" /></a>
-          <a href="nosotros.html"><img src="imagenes/NOSOTROS.svg" alt="Image 5" /></a>
+        <div class="carta">
+          <img src="imagenes/botella-Ejemplo 2.png" alt="Image 10" />
+          <h3>Mezcal Blanco Joven, Etiqueta Verde.</h3>
+          <p>Agotado</p>
         </div>
-        <div class="Iconos">
-          <img src="imagenes/lupa 1.svg" alt="Image 6" />
-          <a href="carrito.html"><img src="imagenes/bolsa-de-la-compra 1.svg" alt="Image 7" /></a>
-          <a href="login.html"><img src="imagenes/usuario 1.svg" alt="Image 8" /></a>
+        <div class="carta">
+          <img src="imagenes/botella-Ejemplo 2.png" alt="Image 11" />
+          <h3>Mezcal Blanco Joven, Etiqueta Verde.</h3>
+          <p>Agotado</p>
         </div>
-      </div>
-    </header>
-    <section class="Productos">
-      <div class="Pmezcales2">
-        <div class="productos">
-          <div class="carta">
-            <img src="imagenes/botella-Ejemplo 2.png" alt="Image 10" />
-            <h3>Mezcal Blanco Joven, Etiqueta Verde.</h3>
-            <p>Agotado</p>
-          </div>
-          <div class="carta">
-            <img src="imagenes/botella-Ejemplo 2.png" alt="Image 10" />
-            <h3>Mezcal Blanco Joven, Etiqueta Verde.</h3>
-            <p>Agotado</p>
-          </div>
-          <div class="carta">
-            <img src="imagenes/botella-Ejemplo 2.png" alt="Image 11" />
-            <h3>Mezcal Blanco Joven, Etiqueta Verde.</h3>
-            <p>Agotado</p>
-          </div>
-          <div class="carta">
-            <img src="imagenes/botella-Ejemplo 2.png" alt="Image 12" />
-            <h3>Mezcal Blanco Joven, Etiqueta Verde.</h3>
-            <p>Agotado</p>
-          </div>
-        </div>
-        <div class="productos">
-            <div class="carta">
-                <img src="imagenes/botella-Ejemplo 2.png" alt="Image 10" />
-                <h3>Mezcal Blanco Joven, Etiqueta Verde.</h3>
-                <p>Agotado</p>
-              </div>
-          <div class="carta">
-            <img src="imagenes/botella-Ejemplo 2.png" alt="Image 10" />
-            <h3>Mezcal Blanco Joven, Etiqueta Verde.</h3>
-            <p>Agotado</p>
-          </div>
-          <div class="carta">
-            <img src="imagenes/botella-Ejemplo 2.png" alt="Image 11" />
-            <h3>Mezcal Blanco Joven, Etiqueta Verde.</h3>
-            <p>Agotado</p>
-          </div>
-          <div class="carta">
-            <img src="imagenes/botella-Ejemplo 2.png" alt="Image 12" />
-            <h3>Mezcal Blanco Joven, Etiqueta Verde.</h3>
-            <p>Agotado</p>
-          </div>
-        </div>
-        <div class="productos">
-          <div class="carta">
-            <img src="imagenes/botella-Ejemplo 2.png" alt="Image 10" />
-            <h3>Mezcal Blanco Joven, Etiqueta Verde.</h3>
-            <p>Agotado</p>
-          </div>
-          <div class="carta">
-            <img src="imagenes/botella-Ejemplo 2.png" alt="Image 10" />
-            <h3>Mezcal Blanco Joven, Etiqueta Verde.</h3>
-            <p>Agotado</p>
-          </div>
-          <div class="carta">
-            <img src="imagenes/botella-Ejemplo 2.png" alt="Image 11" />
-            <h3>Mezcal Blanco Joven, Etiqueta Verde.</h3>
-            <p>Agotado</p>
-          </div>
-          <div class="carta">
-            <img src="imagenes/botella-Ejemplo 2.png" alt="Image 12" />
-            <h3>Mezcal Blanco Joven, Etiqueta Verde.</h3>
-            <p>Agotado</p>
-          </div>
-        </div>
-        <div class="Bmostrar">
-          <img src="imagenes/botonMostrarMás.svg" alt="" />
+        <div class="carta">
+          <img src="imagenes/botella-Ejemplo 2.png" alt="Image 12" />
+          <h3>Mezcal Blanco Joven, Etiqueta Verde.</h3>
+          <p>Agotado</p>
         </div>
       </div>
-    </section>
-    <footer>
-        <div class="Redes">
-          <img src="imagenes/logoFooter.svg" alt="">
-          <div class="Contacto">
-            <p>CONTÁCTO</p>
-            <p>CEL - 4435954101</p>
-            <p>CORREO - contacto@mezcalion.com</p>
-          </div>
-          <div class="Paginas">
-            <p>PRODUCTOS</p>
-            <p>NOSOTROS</p>
-            <p>LOGIN</p>
-            <p>CARRITO</p>
-          </div>
-          <img src="imagenes/paypal-credit-card.svg" alt="">
-      </footer>
-  </body>
+      <div class="productos">
+        <div class="carta">
+          <img src="imagenes/botella-Ejemplo 2.png" alt="Image 10" />
+          <h3>Mezcal Blanco Joven, Etiqueta Verde.</h3>
+          <p>Agotado</p>
+        </div>
+        <div class="carta">
+          <img src="imagenes/botella-Ejemplo 2.png" alt="Image 10" />
+          <h3>Mezcal Blanco Joven, Etiqueta Verde.</h3>
+          <p>Agotado</p>
+        </div>
+        <div class="carta">
+          <img src="imagenes/botella-Ejemplo 2.png" alt="Image 11" />
+          <h3>Mezcal Blanco Joven, Etiqueta Verde.</h3>
+          <p>Agotado</p>
+        </div>
+        <div class="carta">
+          <img src="imagenes/botella-Ejemplo 2.png" alt="Image 12" />
+          <h3>Mezcal Blanco Joven, Etiqueta Verde.</h3>
+          <p>Agotado</p>
+        </div>
+      </div>
+      <div class="productos">
+        <div class="carta">
+          <img src="imagenes/botella-Ejemplo 2.png" alt="Image 10" />
+          <h3>Mezcal Blanco Joven, Etiqueta Verde.</h3>
+          <p>Agotado</p>
+        </div>
+        <div class="carta">
+          <img src="imagenes/botella-Ejemplo 2.png" alt="Image 10" />
+          <h3>Mezcal Blanco Joven, Etiqueta Verde.</h3>
+          <p>Agotado</p>
+        </div>
+        <div class="carta">
+          <img src="imagenes/botella-Ejemplo 2.png" alt="Image 11" />
+          <h3>Mezcal Blanco Joven, Etiqueta Verde.</h3>
+          <p>Agotado</p>
+        </div>
+        <div class="carta">
+          <img src="imagenes/botella-Ejemplo 2.png" alt="Image 12" />
+          <h3>Mezcal Blanco Joven, Etiqueta Verde.</h3>
+          <p>Agotado</p>
+        </div>
+      </div>
+      <div class="Bmostrar">
+        <img src="imagenes/botonMostrarMás.svg" alt="" />
+      </div>
+    </div>
+  </section>
+  <footer>
+    <div class="Redes">
+      <img src="imagenes/logoFooter.svg" alt="">
+      <div class="Contacto">
+        <p>CONTÁCTO</p>
+        <p>CEL - 4435954101</p>
+        <p>CORREO - contacto@mezcalion.com</p>
+      </div>
+      <div class="Paginas">
+        <p>PRODUCTOS</p>
+        <p>NOSOTROS</p>
+        <p>LOGIN</p>
+        <p>CARRITO</p>
+      </div>
+      <img src="imagenes/paypal-credit-card.svg" alt="">
+  </footer>
+  <script>
+    fetch('navegacion.html')
+      .then(response => response.text())
+      .then(text => {
+        const header = document.querySelector('header');
+        if (header) {
+          header.innerHTML = text;
+        } else {
+          const body = document.querySelector('body');
+          body.insertAdjacentHTML('afterbegin', text);
+        }
+      })
+      .catch(error => console.error(error));
+  </script>
+</body>
+
 </html>
