--- a/Pagina WEB/navegacion.html
+++ b/Pagina WEB/navegacion.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <nav class="Bnavegación">
+    <nav class="menu">
         <div class="Logo">
             <a href="index.html"><img src="imagenes/MEZCALIÓN.svg" alt="Image 1" /></a>
             <a href="index.html"><img src="imagenes/logo 2.svg" alt="Image 2" /></a>
