se agrego la carpeta css y js, se cambio el nombre de la carpeta imagenes y se modifico todas las rutas que se modificaron, se agrego un script para modificar el color de las imagenes de la bara de navegacion

--- a/Pagina WEB/footer.html
+++ b/Pagina WEB/footer.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="Redes">
-        <img src="imagenes/logoFooter.svg" alt="">
+        <img src="img/logoFooter.svg" alt="">
         <div class="Contacto">
             <p>CONTÁCTO</p>
             <p>CEL - 4435954101</p>
@@ -22,7 +22,7 @@
             <p>LOGIN</p>
             <p>CARRITO</p>
         </div>
-        <img src="imagenes/paypal-credit-card.svg" alt="">
+        <img src="img/paypal-credit-card.svg" alt="">
         <footer>
 
         </footer>
