modificaciones en nombres de clases en productos

--- a/Pagina WEB/productos.html
+++ b/Pagina WEB/productos.html
@@ -11,9 +11,9 @@
 <body>
   <header>
   </header>
-  <section class="Productos">
-    <div class="Pmezcales2">
-      <div class="productos">
+  <main>
+    <div class="contenedor-productos">
+      <div class="fila-productos">
         <div class="carta">
           <img src="img/botella-Ejemplo 2.png" alt="Image 10" />
           <h3>Mezcal Blanco Joven, Etiqueta Verde.</h3>
@@ -35,7 +35,7 @@
           <p>Agotado</p>
         </div>
       </div>
-      <div class="productos">
+      <div class="fila-productos">
         <div class="carta">
           <img src="img/botella-Ejemplo 2.png" alt="Image 10" />
           <h3>Mezcal Blanco Joven, Etiqueta Verde.</h3>
@@ -57,7 +57,7 @@
           <p>Agotado</p>
         </div>
       </div>
-      <div class="productos">
+      <div class="fila-productos">
         <div class="carta">
           <img src="img/botella-Ejemplo 2.png" alt="Image 10" />
           <h3>Mezcal Blanco Joven, Etiqueta Verde.</h3>
@@ -79,11 +79,11 @@
           <p>Agotado</p>
         </div>
       </div>
-      <div class="Bmostrar">
+      <div class="boton-mostrar-mas">
         <img src="img/botonMostrarMás.svg" alt="" />
       </div>
     </div>
-  </section>
+  </main>
   <footer>
   </footer>
   <script src="js/barras de navegacion.js"></script>
