--- a/Pagina WEB/productos.html
+++ b/Pagina WEB/productos.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="css/estilos.css" />
-  <title>Prodcutos</title>
+  <title>Productos</title>
 </head>
 
 <body>
