Se agrego boton de chatbot

--- a/Pagina WEB/index.html
+++ b/Pagina WEB/index.html
@@ -90,6 +90,7 @@
       </div>
     </div>
   </section>
+  <div id="chat-contenedor"></div>
   <footer>
   </footer>
   <script src="js/barras de navegacion.js"></script>
