--- a/Pagina WEB/productos.html
+++ b/Pagina WEB/productos.html
@@ -83,6 +83,7 @@
         <img src="img/botonMostrarMás.svg" alt="" />
       </div>
     </div>
+    <div id="chat-contenedor"></div>
   </main>
   <footer>
   </footer>
