--- a/Pagina WEB/nosotros.html
+++ b/Pagina WEB/nosotros.html
@@ -64,6 +64,7 @@
       </div>
     </div>
   </section>
+  <div id="chat-contenedor"></div>
   <footer>
   </footer>
   <script src="js/barras de navegacion.js"></script>
