creacion de carrito

--- a/Pagina WEB/chat.html
+++ b/Pagina WEB/chat.html
@@ -9,16 +9,9 @@
 </head>
 
 <body>
-    <button class="chat-button" onclick="openChat()">
+    <button class="chat-button">
         <img src="img/chatbot.png" alt="Chat Button">
     </button>
-
-    <script>
-        function openChat() {
-            // Implementa la función que abre el chat aquí
-            console.log('Abrir chat de conversación');
-        }
-    </script>
 </body>
 
 </html>
