--- a/Pagina WEB/index.html
+++ b/Pagina WEB/index.html
@@ -68,7 +68,7 @@
   </section>
   <section>
     <div class="Titulo">
-      <h2>COCTELES</h2>
+      <h2>CÓCTELES</h2>
     </div>
     <div class="productos-cocteles">
       <article class="productos">
