Conectar Productos de la base de datos
La busqueda por input funciona pero no por botones, la consola del navegador que el archivo css no se encuentra

--- a/Pagina WEB/index.html
+++ b/Pagina WEB/index.html
@@ -28,17 +28,17 @@
     <div class="productos-mezcales">
       <article class="productos">
         <div class="carta">
-          <img src="img/botella.png" alt="Image 10" />
+          <img src="img/botella_Jabali.png" alt="Image 10" />
           <h3>Mezcal Blanco Joven, Etiqueta Verde.</h3>
           <p>Agotado</p>
         </div>
         <div class="carta">
-          <img src="img/botella.png" alt="Image 11" />
+          <img src="img/botella_Jabali.png" alt="Image 11" />
           <h3>Mezcal Blanco Joven, Etiqueta Verde.</h3>
           <p>Agotado</p>
         </div>
         <div class="carta">
-          <img src="img/botella.png" alt="Image 12" />
+          <img src="img/botella_Jabali.png" alt="Image 12" />
           <h3>Mezcal Blanco Joven, Etiqueta Verde.</h3>
           <p>Agotado</p>
         </div>
@@ -46,17 +46,17 @@
       <div class="productos-mezcales">
         <article class="productos">
           <div class="carta">
-            <img src="img/botella.png" alt="Image 10" />
+            <img src="img/botella_Jabali.png" alt="Image 10" />
             <h3>Mezcal Blanco Joven, Etiqueta Verde.</h3>
             <p>Agotado</p>
           </div>
           <div class="carta">
-            <img src="img/botella.png" alt="Image 11" />
+            <img src="img/botella_Jabali.png" alt="Image 11" />
             <h3>Mezcal Blanco Joven, Etiqueta Verde.</h3>
             <p>Agotado</p>
           </div>
           <div class="carta">
-            <img src="img/botella.png" alt="Image 12" />
+            <img src="img/botella_Jabali.png" alt="Image 12" />
             <h3>Mezcal Blanco Joven, Etiqueta Verde.</h3>
             <p>Agotado</p>
           </div>
