--- a/Pagina WEB/navegacion.html
+++ b/Pagina WEB/navegacion.html
@@ -16,7 +16,7 @@
         </div>
         <div class="Apartados">
             <a href="index.html" id="link-inicio"><img src="img/INICIO.svg" alt="Image 3" id="img-inicio"/></a>
-            <a href="productos.html" id="link-productos"><img src="img/PRODUCTOS.svg" alt="Image 4" id="img-productos"/></a>
+            <a href="productos.php" id="link-productos"><img src="img/PRODUCTOS.svg" alt="Image 4" id="img-productos"/></a>
             <a href="nosotros.html" id="link-nosotros"><img src="img/NOSOTROS.svg" alt="Image 5" id="img-nosotros"/></a>
         </div>
         <div class="Iconos">
