--- a/Pagina WEB/carrito.html
+++ b/Pagina WEB/carrito.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carrito de Compras - Mezcalería MezcaLion</title>
-    <link rel="stylesheet" href="css/estilos.css"> <!-- Asegúrate de cambiar la ruta según corresponda -->
+    <link rel="stylesheet" href="estilos.css"> <!-- Asegúrate de cambiar la ruta según corresponda -->
 </head>
 
 <body>
