--- a/Pagina WEB/login.html
+++ b/Pagina WEB/login.html
@@ -11,7 +11,7 @@
 <body>
     <header></header>
     <main>
-        <div id="registroFormulario">
+        <div id="registroFormulario" style="display: none;">
             <section class="formulario">
                 <div class="titulo">
                     <h1>REGÍSTRATE</h1>
@@ -42,7 +42,7 @@
             </section>
         </div>
 
-        <div id="sesionFormulario" style="display: none;">
+        <div id="sesionFormulario">
             <section class="formulario-sesion">
                 <div class="titulo">
                     <h1>INICIA SESIÓN</h1>
